<resources>
    <string name="app_name">Osobní evidence péče</string>
    <string name="edit">Upravit</string>
    <string name="export">Exportovat</string>
    <string name="delete">Smazat</string>
    <string name="add_medical_record">Přidat lékařskou zprávu</string>
    <string name="filter_medical_records">Filtrovat lékařské zprávy</string>
    <string name="medical_records_filter_by_date">Datumu</string>
    <string name="medical_records_filter_by_problem_category">Kategorie problému</string>
    <string name="medical_records_filter_by_medical_worker">Lékaře</string>
    <string name="text_simple_separator">/</string>
    <string name="medical_records_add_file">Přidat soubor</string>
    <string name="add_edit_medical_records_save">Uložit</string>
    <string name="record_filter">Filtrovat</string>
    <string name="select_image">Vyberte soubor</string>
    <string name="medical_record_take_photo">Vyfotit zprávu</string>
    <string name="medical_record_attach_file">Vybrat soubor</string>
    <string name="medical_record_diagnose">Diagnóza</string>
    <string name="medical_record_visit_date">Datum návštěvy</string>
    <string name="patient">Pacient</string>
    <string name="select_options_cancel">Zrušit</string>
    <string name="select_options_submit">Použít</string>
    <string name="select_file_error">Při přidávání souboru se vyskytla chyba</string>
    <string name="select_file_select_only_file">Pouze soubor</string>
    <string name="add_eddit_medical_record_file_limit_reached">Maximální počet přiložených souborů dosažen</string>
    <string name="no_results">Žádné výsledky</string>
    <string name="results_could_not_be_loaded">Nepodařilo se načíst výsledky</string>
    <string name="add_edit_error">Při přidávání se vyskytla chyba</string>
    <string name="add_edit_success">Lékařská zpráva byla úspěšně přidána</string>
    <string name="add_edit_patient_not_selected">Pacient není vybrán</string>
    <string name="date_picker_description">Vyberte datum návštěvy</string>
    <string name="medical_record_no_medical_worker">Žádný lékař</string>
    <string name="medical_record_no_diagnose">Žádná diagnóze</string>
    <string name="navigation_add_medical_record">Nová lékařská zpráva</string>
    <string name="navigation_edit_medical_record">Upravit lékařskou zprávu</string>
    <string name="navigation_select_file">Nový soubor pro lékařskou zprávu</string>
</resources>