<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.addedit.AddEditMedicalRecordsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_files_box"
        style="@style/BoxShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/box_background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_counter_files"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_view_current_size_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    tools:text="3" />

                <TextView
                    android:id="@+id/text_view_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_simple_separator" />

                <TextView
                    android:id="@+id/text_view_total_size_files"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    tools:text="3" />
            </LinearLayout>

            <Button
                android:id="@+id/button_add_file"
                style="@style/CustomButton"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_records_add_file"
                app:icon="@drawable/ic_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:id="@+id/grid_layout_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_line">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="1"
                tools:listitem="@layout/item_file_thumbnail" />
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_form"
        style="@style/BoxShadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/box_background_light"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_files_box"
        app:layout_constraintStart_toStartOf="parent">


        <cz.vvoleman.phr.common.ui.view.datepicker.DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spinner_diagnose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />



        <Button
            android:id="@+id/button_save"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:text="@string/add_edit_medical_records_save"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>